tests/derive/snapshots/tests__derive__help__multiple_helps.snap
---
source: tests/derive/help.rs
expression: "render(Foo {})"
---
× error: foo
   help: better luck next time!
   help: you'll get there!
