tests/derive/snapshots/tests__derive__help__multiple_lines.snap
---
source: tests/derive/help.rs
expression: "render(Foo {})"
---
× error: foo
   help: better luck next time!
         you'll get there!
