tests/derive/snapshots/tests__derive__help__single_line.snap
---
source: tests/derive/help.rs
expression: "render(Foo {})"
---
× error: foo
   help: better luck next time!
